--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <!--    <link rel="stylesheet" href="src/styles/styles.css">-->
 </head>
 
 <body data-spy="scroll" data-target="#navbar-example">
@@ -22,7 +21,7 @@
             <li role="presentation">
                 <a href="#section2">
                     <span class="nav__counter">Калькулятор объектов</span>
-                    <p class="nav__body"><b>Подсчитайте количество активных/неактивных объектов</b>. </p>
+                    <p class="nav__body"><b>Подсчитайте количество объектов БСМТС</b>. </p>
                 </a>
             </li>
 
@@ -40,7 +39,7 @@
     </section>
 
     <section class="section section2" id="section2">
-        Section 2
+        Калькулятор объектов
     </section>
 
     <section class="section section3" id="section3">
@@ -49,6 +48,5 @@
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>-->
 </body>
 </html>
