--- a/index.html
+++ b/index.html
@@ -37,96 +37,25 @@
     <section class="section section1" id="section1">
         <div class="container">
             <h1>Добро пожаловать!</h1>
-            <div class="txt">
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci animi aperiam assumenda
-                    distinctio excepturi facere labore laboriosam nobis officia possimus, quae sint ullam. Architecto
-                    dignissimos excepturi ipsum iure pariatur veniam.
-                </div>
-                <div>A, accusamus adipisci commodi dicta dignissimos dolore dolores esse explicabo itaque modi nemo
-                    neque numquam odio odit officiis omnis pariatur placeat, porro praesentium quos reiciendis rem unde
-                    vel vero voluptatibus.
-                </div>
-                <div>Aliquam aliquid amet aperiam atque ducimus ea eius eligendi eveniet facere iusto libero magnam modi
-                    obcaecati officia quam qui, soluta voluptatibus! Earum eius in, labore mollitia nemo nobis
-                    reiciendis vel!
-                </div>
-                <div>Aspernatur deleniti dolorem eos ex facere impedit incidunt ipsa laborum magni, nihil numquam odio
-                    optio pariatur, reiciendis soluta, sunt tenetur vel voluptas! Aspernatur culpa cum distinctio dolor
-                    enim magnam, quo.
-                </div>
-                <div>Accusamus adipisci aperiam at culpa dolor doloremque dolorum exercitationem harum illo inventore
-                    ipsa iste libero magnam maxime, natus nulla, obcaecati possimus praesentium quas repellat
-                    repudiandae saepe sunt temporibus voluptate voluptatem!
-                </div>
-                <div>Accusantium alias aliquid animi architecto autem, cupiditate, dolore doloribus earum eius eligendi
-                    eveniet ex impedit ipsam ipsum iure maxime minima minus numquam placeat quam qui rerum saepe unde
-                    vel voluptates?
-                </div>
-                <div>Aliquam aperiam beatae cumque dignissimos dolores eos, est ipsum minus nam nemo odio, optio quae
-                    reiciendis vitae voluptate. Accusantium adipisci corporis dicta explicabo hic mollitia odio, quae
-                    quaerat similique sit?
-                </div>
-                <div>Blanditiis delectus dicta doloribus ducimus incidunt ipsam ipsum, iste iure labore nam nihil
-                    quaerat repellendus tempora, ut vero! Accusantium, at commodi inventore itaque nihil obcaecati
-                    voluptate. Deleniti omnis praesentium provident.
-                </div>
-                <div>Aut blanditiis consectetur consequatur deserunt dignissimos dolor dolorem eaque in, inventore natus
-                    nesciunt nulla porro quas qui quidem recusandae rem reprehenderit sapiente sed sit sunt tempore
-                    ullam unde vel voluptatem.
-                </div>
-                <div>Aut corporis et harum ipsa iure laboriosam perspiciatis sed, voluptas? A animi, assumenda atque
-                    cumque doloremque ea eaque esse ex, ipsam laborum magnam magni officia repudiandae sed tempora
-                    temporibus ullam.
-                </div>
-            </div>
         </div>
-
     </section>
 
     <section class="section section2" id="section2">
         <div class="container">
-            <h1>Калькулятор объектов!</h1>
-            <div class="txt">
-                <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci animi aperiam assumenda
-                    distinctio excepturi facere labore laboriosam nobis officia possimus, quae sint ullam. Architecto
-                    dignissimos excepturi ipsum iure pariatur veniam.
+            <h1>Калькулятор объектов</h1>
+
+            <div class="modal">
+                <div class="form-title">
+                    <h1>Заказать звонок</h1>
                 </div>
-                <div>A, accusamus adipisci commodi dicta dignissimos dolore dolores esse explicabo itaque modi nemo
-                    neque numquam odio odit officiis omnis pariatur placeat, porro praesentium quos reiciendis rem unde
-                    vel vero voluptatibus.
+                <div class="form-body">
+                    <form>
+                        <input type="text" placeholder="Ваше имя">
+                        <input type="tel" placeholder="Ваше телефон">
+                        <input type="submit" value="Отправить">
+                    </form>
                 </div>
-                <div>Aliquam aliquid amet aperiam atque ducimus ea eius eligendi eveniet facere iusto libero magnam modi
-                    obcaecati officia quam qui, soluta voluptatibus! Earum eius in, labore mollitia nemo nobis
-                    reiciendis vel!
-                </div>
-                <div>Aspernatur deleniti dolorem eos ex facere impedit incidunt ipsa laborum magni, nihil numquam odio
-                    optio pariatur, reiciendis soluta, sunt tenetur vel voluptas! Aspernatur culpa cum distinctio dolor
-                    enim magnam, quo.
-                </div>
-                <div>Accusamus adipisci aperiam at culpa dolor doloremque dolorum exercitationem harum illo inventore
-                    ipsa iste libero magnam maxime, natus nulla, obcaecati possimus praesentium quas repellat
-                    repudiandae saepe sunt temporibus voluptate voluptatem!
-                </div>
-                <div>Accusantium alias aliquid animi architecto autem, cupiditate, dolore doloribus earum eius eligendi
-                    eveniet ex impedit ipsam ipsum iure maxime minima minus numquam placeat quam qui rerum saepe unde
-                    vel voluptates?
-                </div>
-                <div>Aliquam aperiam beatae cumque dignissimos dolores eos, est ipsum minus nam nemo odio, optio quae
-                    reiciendis vitae voluptate. Accusantium adipisci corporis dicta explicabo hic mollitia odio, quae
-                    quaerat similique sit?
-                </div>
-                <div>Blanditiis delectus dicta doloribus ducimus incidunt ipsam ipsum, iste iure labore nam nihil
-                    quaerat repellendus tempora, ut vero! Accusantium, at commodi inventore itaque nihil obcaecati
-                    voluptate. Deleniti omnis praesentium provident.
-                </div>
-                <div>Aut blanditiis consectetur consequatur deserunt dignissimos dolor dolorem eaque in, inventore natus
-                    nesciunt nulla porro quas qui quidem recusandae rem reprehenderit sapiente sed sit sunt tempore
-                    ullam unde vel voluptatem.
-                </div>
-                <div>Aut corporis et harum ipsa iure laboriosam perspiciatis sed, voluptas? A animi, assumenda atque
-                    cumque doloremque ea eaque esse ex, ipsam laborum magnam magni officia repudiandae sed tempora
-                    temporibus ullam.
-                </div>
+
             </div>
         </div>
     </section>
