styling a modal window

--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
             <h1>Калькулятор объектов</h1>
 
             <div class="modal">
-                <div class="form-title">
-                    <h1>Заказать звонок</h1>
+                <div class="form-title-wrapper">
+                    <span class="form-title">Авторизация в Glonasssoft</span>
                 </div>
                 <div class="form-body">
                     <form>
-                        <input type="text" placeholder="Ваше имя">
-                        <input type="tel" placeholder="Ваше телефон">
-                        <input type="submit" value="Отправить">
+                        <input type="text" placeholder="Введите логин учетки технической поддержки" class="form-body-login">
+                        <input type="text" placeholder="Введите пароль" class="form-body-password">
+                        <button type="submit" formmethod="get" class="btn-submit">Войти</button>
                     </form>
                 </div>
 
