--- a/index.html
+++ b/index.html
@@ -27,8 +27,14 @@
 
             <li role="presentation">
                 <a href="#section3">
-                    <span class="nav__counter">Главная</span>
+                    <span class="nav__counter">Сделки на карте</span>
                     <p class="nav__body"><b>Выберите необходимый инструмент</b>. </p>
+                </a>
+            </li>
+            <li role="presentation">
+                <a href="#section4">
+                    <span class="nav__counter">Привет</span>
+                    <p class="nav__body"><b>привет</b>. </p>
                 </a>
             </li>
         </ul>
@@ -54,6 +60,7 @@
                         <input type="text" placeholder="Введите логин учетки технической поддержки"
                                class="form-body-login">
                         <input type="text" placeholder="Введите пароль" class="form-body-password">
+                        <span></span>
                     </form>
                     <button type="submit" formmethod="get" class="btn-submit">Войти</button>
                 </div>
@@ -109,10 +116,15 @@
             </div>
         </div>
     </section>
-</div>
 
-<div class="row">
-    <div class="container">Привет</div>
+    <section class="section section4" id="section4">
+        <div class="container">
+            <h1>Привет</h1>
+            <div class="txt">
+                <div>Привет</div>
+            </div>
+        </div>
+    </section>
 </div>
 
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>-->
