refactoring is continue

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="nav__wrapper" id="navbar-example">
         <ul class="nav">
 
-            <li role="presentation" class="active">
+            <li role="presentation">
                 <a href="#section1">
                     <span class="nav__counter">Главная</span>
                     <p class="nav__body"><b>Выберите нужный Вам инструмент</b>. </p>
