continue refactoring and rework of application logic

--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
     <nav class="nav__wrapper" id="navbar-example">
         <ul class="nav">
 
-            <li role="presentation">
+            <li role="presentation" data-page="main" class="">
                 <a href="#section1">
                     <span class="nav__counter">Главная</span>
                     <p class="nav__body"><b>Выберите нужный Вам инструмент</b>. </p>
                 </a>
             </li>
 
-            <li role="presentation">
+            <li role="presentation" data-page="calc" class="">
                 <a href="#section2">
                     <span class="nav__counter">Калькулятор объектов</span>
                     <p class="nav__body"><b>Подсчитайте количество объектов БСМТС</b>. </p>
                 </a>
             </li>
 
-            <li role="presentation">
+            <li role="presentation" data-page="map" class="">
                 <a href="#section3">
                     <span class="nav__counter">Сделки на карте</span>
                     <p class="nav__body"><b>Выберите необходимый инструмент</b>. </p>
                 </a>
             </li>
-            <li role="presentation">
+            <li role="presentation" data-page="hi" class="">
                 <a href="#section4">
                     <span class="nav__counter">Привет</span>
                     <p class="nav__body"><b>привет</b>. </p>
