complete a task to sign in into Glonasssoft

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                 </div>
                 <div class="form-wrapper">
                     <form class="form-body">
-                        <input type="text" placeholder="Введите логин учетки технической поддержки"
+                        <input type="text" autocomplete="username" placeholder="Введите логин учетки тех. поддержки"
                                class="form-body-login">
-                        <input type="text" placeholder="Введите пароль" class="form-body-password">
+                        <input type="password" autocomplete="current-password" placeholder="Введите пароль" class="form-body-password">
                         <span></span>
                     </form>
                     <button type="submit" formmethod="get" class="btn-submit">Войти</button>
