working with viewing data

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li role="presentation" data-page="calc" class="">
                 <a href="#section2">
                     <span class="nav__counter">Калькулятор объектов</span>
-                    <p class="nav__body"><b>Подсчитайте количество объектов БСМТС</b>. </p>
+                    <p class="nav__body"><b>Подсчет неактивных объектов БСМТС</b>. </p>
                 </a>
             </li>
 
@@ -48,25 +48,49 @@
 
     <section class="section section2" id="section2">
 
-        <div class="container">
-            <h1>Калькулятор объектов</h1>
-
-            <div class="modal">
-                <div class="form-title-wrapper">
-                    <span class="form-title">Авторизация в Glonasssoft</span>
-                </div>
-                <div class="form-wrapper">
-                    <form class="form-body">
-                        <input type="text" autocomplete="username" placeholder="Введите логин учетки тех. поддержки"
-                               class="form-body-login">
-                        <input type="password" autocomplete="current-password" placeholder="Введите пароль" class="form-body-password">
-                        <span></span>
-                    </form>
-                    <button type="submit" formmethod="get" class="btn-submit">Войти</button>
-                </div>
+        <div class="modal">
+            <div class="form-title-wrapper">
+                <span class="form-title">Авторизация в Glonasssoft</span>
+            </div>
+            <div class="form-wrapper">
+                <form class="form-body">
+                    <input type="text" autocomplete="username" placeholder="Введите логин учетки тех. поддержки"
+                           class="form-body-login">
+                    <input type="password" autocomplete="current-password" placeholder="Введите пароль" class="form-body-password">
+                    <span></span>
+                </form>
+                <button type="submit" formmethod="get" class="btn-submit">Войти</button>
             </div>
         </div>
+        <h1>Калькулятор объектов</h1>
+        <div class="work-wrapper">
+            <div class="work-data">
+                <div class="client-data">asdasd1</div>
+                <div class="client-data">asdasd2</div>
+                <div class="client-data">asdasd3</div>
+                <div class="client-data">asdasd4</div>
+                <div class="client-data">asdasd5</div>
+                <div class="client-data">asdasd6</div>
+                <div class="client-data">asdasd7</div>
+                <div class="client-data">asdasd8</div>
+                <div class="client-data">asdasd9</div>
+                <div class="client-data">asdasd10</div>
+                <div class="client-data">asdasd11</div>
+                <div class="client-data">asdasd12</div>
+                <div class="client-data">asdasd13</div>
+                <div class="client-data">asdasd14</div>
+                <div class="client-data">asdasd15</div>
+                <div class="client-data">asdasd16</div>
+                <div class="client-data">asdasd17</div>
+                <div class="client-data">asdasd18</div>
+                <div class="client-data">asdasd19</div>
+                <div class="client-data">asdasd20</div>
+                <div class="client-data">asdasd21</div>
+                <div class="client-data">asdasd22</div>
+                <div class="client-data">asdasd23</div>
+            </div>
 
+        </div>
     </section>
 
     <section class="section section3" id="section3">
