building table interface

--- a/index.html
+++ b/index.html
@@ -56,44 +56,288 @@
                 <form class="form-body">
                     <input type="text" autocomplete="username" placeholder="Введите логин учетки тех. поддержки"
                            class="form-body-login">
-                    <input type="password" autocomplete="current-password" placeholder="Введите пароль" class="form-body-password">
+                    <input type="password" autocomplete="current-password" placeholder="Введите пароль"
+                           class="form-body-password">
                     <span></span>
                 </form>
                 <button type="submit" formmethod="get" class="btn-submit">Войти</button>
             </div>
         </div>
         <h1>Калькулятор объектов</h1>
-        <div class="work-wrapper">
-            <div class="work-data">
-                <div class="client-data">
-                    <a>asdasd1</a>
-                    <a href="">12</a>
-                    <a href="">21</a>
-                </div>
-                <div class="client-data"><a>asdasd2</a></div>
-                <div class="client-data"><a>asdasd3</a></div>
-                <div class="client-data"><a>asdasd4</a></div>
-                <div class="client-data"><a>asdasd5</a></div>
-                <div class="client-data"><a>asdasd6</a></div>
-                <div class="client-data"><a>asdasd7</a></div>
-                <div class="client-data"><a>asdasd8</a></div>
-                <div class="client-data"><a>asdasd9</a></div>
-                <div class="client-data"><a>asdasd10</a></div>
-                <div class="client-data"><a>asdasd11</a></div>
-                <div class="client-data"><a>asdasd12</a></div>
-                <div class="client-data"><a>asdasd13</a></div>
-                <div class="client-data"><a>asdasd14</a></div>
-                <div class="client-data"><a>asdasd15</a></div>
-                <div class="client-data"><a>asdasd16</a></div>
-                <div class="client-data"><a>asdasd17</a></div>
-                <div class="client-data"><a>asdasd18</a></div>
-                <div class="client-data"><a>asdasd19</a></div>
-                <div class="client-data"><a>asdasd20</a></div>
-                <div class="client-data"><a>asdasd21</a></div>
-                <div class="client-data"><a>asdasd22</a></div>
-                <div class="client-data"><a>asdasd23</a></div>
-            </div>
+        <div class="service-buttons">
+            <a role="button" class="save-doc"></a>
+            <a role="button" class="print"></a>
+        </div>
 
+        <div class="work-wrapper">
+            <div class="client-data-header">
+
+                <div class="client-name">Название компании</div>
+
+                <div class="numeric-data">
+                    <div class="active-objects-header">Активных</div>
+                    <div class="inactive-objects-header">Неактивных</div>
+                </div>
+
+            </div>
+            <div class="work-data">
+
+                <div class="client-data">
+
+                    <div class="client-data-label">
+                        <a>Строительство трубопроводных систем</a>
+                    </div>
+
+                    <div class="client-data-buttons">
+                        <a role="button" class="active-objects">12</a>
+                        <a role="button" class="inactive-objects">12</a>
+                    </div>
+
+                </div>
+                <div class="client-data">
+
+                    <div class="client-data-label">
+                        <a>Строительство трубопроводных систем</a>
+                    </div>
+
+                    <div class="client-data-buttons">
+                        <a role="button" class="active-objects">12</a>
+                        <a role="button" class="inactive-objects">12</a>
+                    </div>
+
+                </div>
+                <div class="client-data">
+
+                    <div class="client-data-label">
+                        <a>Строительство трубопроводных систем</a>
+                    </div>
+
+                    <div class="client-data-buttons">
+                        <a role="button" class="active-objects">12</a>
+                        <a role="button" class="inactive-objects">12</a>
+                    </div>
+
+                </div>
+                <div class="client-data">
+
+                    <div class="client-data-label">
+                        <a>Строительство трубопроводных систем</a>
+                    </div>
+
+                    <div class="client-data-buttons">
+                        <a role="button" class="active-objects">12</a>
+                        <a role="button" class="inactive-objects">12</a>
+                    </div>
+
+                </div>
+                <div class="client-data">
+
+                    <div class="client-data-label">
+                        <a>Строительство трубопроводных систем</a>
+                    </div>
+
+                    <div class="client-data-buttons">
+                        <a role="button" class="active-objects">12</a>
+                        <a role="button" class="inactive-objects">12</a>
+                    </div>
+
+                </div>
+                <div class="client-data">
+
+                    <div class="client-data-label">
+                        <a>Строительство трубопроводных систем</a>
+                    </div>
+
+                    <div class="client-data-buttons">
+                        <a role="button" class="active-objects">12</a>
+                        <a role="button" class="inactive-objects">12</a>
+                    </div>
+
+                </div>
+                <div class="client-data">
+
+                    <div class="client-data-label">
+                        <a>Строительство трубопроводных систем</a>
+                    </div>
+
+                    <div class="client-data-buttons">
+                        <a role="button" class="active-objects">12</a>
+                        <a role="button" class="inactive-objects">12</a>
+                    </div>
+
+                </div>
+                <div class="client-data">
+
+                    <div class="client-data-label">
+                        <a>Строительство трубопроводных систем</a>
+                    </div>
+
+                    <div class="client-data-buttons">
+                        <a role="button" class="active-objects">12</a>
+                        <a role="button" class="inactive-objects">12</a>
+                    </div>
+
+                </div>
+                <div class="client-data">
+
+                    <div class="client-data-label">
+                        <a>Строительство трубопроводных систем</a>
+                    </div>
+
+                    <div class="client-data-buttons">
+                        <a role="button" class="active-objects">12</a>
+                        <a role="button" class="inactive-objects">12</a>
+                    </div>
+
+                </div>
+                <div class="client-data">
+
+                    <div class="client-data-label">
+                        <a>Строительство трубопроводных систем</a>
+                    </div>
+
+                    <div class="client-data-buttons">
+                        <a role="button" class="active-objects">12</a>
+                        <a role="button" class="inactive-objects">12</a>
+                    </div>
+
+                </div>
+                <div class="client-data">
+
+                    <div class="client-data-label">
+                        <a>Строительство трубопроводных систем</a>
+                    </div>
+
+                    <div class="client-data-buttons">
+                        <a role="button" class="active-objects">12</a>
+                        <a role="button" class="inactive-objects">12</a>
+                    </div>
+
+                </div>
+                <div class="client-data">
+
+                    <div class="client-data-label">
+                        <a>Строительство трубопроводных систем</a>
+                    </div>
+
+                    <div class="client-data-buttons">
+                        <a role="button" class="active-objects">12</a>
+                        <a role="button" class="inactive-objects">12</a>
+                    </div>
+
+                </div>
+                <div class="client-data">
+
+                    <div class="client-data-label">
+                        <a>Строительство трубопроводных систем</a>
+                    </div>
+
+                    <div class="client-data-buttons">
+                        <a role="button" class="active-objects">12</a>
+                        <a role="button" class="inactive-objects">12</a>
+                    </div>
+
+                </div>
+                <div class="client-data">
+
+                    <div class="client-data-label">
+                        <a>Строительство трубопроводных систем</a>
+                    </div>
+
+                    <div class="client-data-buttons">
+                        <a role="button" class="active-objects">12</a>
+                        <a role="button" class="inactive-objects">12</a>
+                    </div>
+
+                </div>
+                <div class="client-data">
+
+                    <div class="client-data-label">
+                        <a>Строительство трубопроводных систем</a>
+                    </div>
+
+                    <div class="client-data-buttons">
+                        <a role="button" class="active-objects">12</a>
+                        <a role="button" class="inactive-objects">12</a>
+                    </div>
+
+                </div>
+                <div class="client-data">
+
+                    <div class="client-data-label">
+                        <a>Строительство трубопроводных систем</a>
+                    </div>
+
+                    <div class="client-data-buttons">
+                        <a role="button" class="active-objects">12</a>
+                        <a role="button" class="inactive-objects">12</a>
+                    </div>
+
+                </div>
+                <div class="client-data">
+
+                    <div class="client-data-label">
+                        <a>Строительство трубопроводных систем</a>
+                    </div>
+
+                    <div class="client-data-buttons">
+                        <a role="button" class="active-objects">12</a>
+                        <a role="button" class="inactive-objects">12</a>
+                    </div>
+
+                </div>
+                <div class="client-data">
+
+                    <div class="client-data-label">
+                        <a>Строительство трубопроводных систем</a>
+                    </div>
+
+                    <div class="client-data-buttons">
+                        <a role="button" class="active-objects">12</a>
+                        <a role="button" class="inactive-objects">12</a>
+                    </div>
+
+                </div>
+                <div class="client-data">
+
+                    <div class="client-data-label">
+                        <a>Строительство трубопроводных систем</a>
+                    </div>
+
+                    <div class="client-data-buttons">
+                        <a role="button" class="active-objects">12</a>
+                        <a role="button" class="inactive-objects">12</a>
+                    </div>
+
+                </div>
+                <div class="client-data">
+
+                    <div class="client-data-label">
+                        <a>Строительство трубопроводных систем</a>
+                    </div>
+
+                    <div class="client-data-buttons">
+                        <a role="button" class="active-objects">12</a>
+                        <a role="button" class="inactive-objects">12</a>
+                    </div>
+
+                </div>
+                <div class="client-data">
+
+                    <div class="client-data-label">
+                        <a>Строительство трубопроводных систем12</a>
+                    </div>
+
+                    <div class="client-data-buttons">
+                        <a role="button" class="active-objects">12</a>
+                        <a role="button" class="inactive-objects">12</a>
+                    </div>
+
+                </div>
+
+
+
+            </div>
         </div>
     </section>
 
