--- a/index.html
+++ b/index.html
@@ -82,260 +82,18 @@
             </div>
             <div class="work-data">
 
-                <div class="client-data">
+<!--                <div class="client-data">-->
 
-                    <div class="client-data-label">
-                        <a>Строительство трубопроводных систем</a>
-                    </div>
+<!--                    <div class="client-data-label">-->
+<!--                        <a>Строительство трубопроводных систем</a>-->
+<!--                    </div>-->
 
-                    <div class="client-data-buttons">
-                        <a role="button" class="active-objects">12</a>
-                        <a role="button" class="inactive-objects">12</a>
-                    </div>
+<!--                    <div class="client-data-buttons">-->
+<!--                        <a role="button" class="active-objects">12</a>-->
+<!--                        <a role="button" class="inactive-objects">12</a>-->
+<!--                    </div>-->
 
-                </div>
-                <div class="client-data">
-
-                    <div class="client-data-label">
-                        <a>Строительство трубопроводных систем</a>
-                    </div>
-
-                    <div class="client-data-buttons">
-                        <a role="button" class="active-objects">12</a>
-                        <a role="button" class="inactive-objects">12</a>
-                    </div>
-
-                </div>
-                <div class="client-data">
-
-                    <div class="client-data-label">
-                        <a>Строительство трубопроводных систем</a>
-                    </div>
-
-                    <div class="client-data-buttons">
-                        <a role="button" class="active-objects">12</a>
-                        <a role="button" class="inactive-objects">12</a>
-                    </div>
-
-                </div>
-                <div class="client-data">
-
-                    <div class="client-data-label">
-                        <a>Строительство трубопроводных систем</a>
-                    </div>
-
-                    <div class="client-data-buttons">
-                        <a role="button" class="active-objects">12</a>
-                        <a role="button" class="inactive-objects">12</a>
-                    </div>
-
-                </div>
-                <div class="client-data">
-
-                    <div class="client-data-label">
-                        <a>Строительство трубопроводных систем</a>
-                    </div>
-
-                    <div class="client-data-buttons">
-                        <a role="button" class="active-objects">12</a>
-                        <a role="button" class="inactive-objects">12</a>
-                    </div>
-
-                </div>
-                <div class="client-data">
-
-                    <div class="client-data-label">
-                        <a>Строительство трубопроводных систем</a>
-                    </div>
-
-                    <div class="client-data-buttons">
-                        <a role="button" class="active-objects">12</a>
-                        <a role="button" class="inactive-objects">12</a>
-                    </div>
-
-                </div>
-                <div class="client-data">
-
-                    <div class="client-data-label">
-                        <a>Строительство трубопроводных систем</a>
-                    </div>
-
-                    <div class="client-data-buttons">
-                        <a role="button" class="active-objects">12</a>
-                        <a role="button" class="inactive-objects">12</a>
-                    </div>
-
-                </div>
-                <div class="client-data">
-
-                    <div class="client-data-label">
-                        <a>Строительство трубопроводных систем</a>
-                    </div>
-
-                    <div class="client-data-buttons">
-                        <a role="button" class="active-objects">12</a>
-                        <a role="button" class="inactive-objects">12</a>
-                    </div>
-
-                </div>
-                <div class="client-data">
-
-                    <div class="client-data-label">
-                        <a>Строительство трубопроводных систем</a>
-                    </div>
-
-                    <div class="client-data-buttons">
-                        <a role="button" class="active-objects">12</a>
-                        <a role="button" class="inactive-objects">12</a>
-                    </div>
-
-                </div>
-                <div class="client-data">
-
-                    <div class="client-data-label">
-                        <a>Строительство трубопроводных систем</a>
-                    </div>
-
-                    <div class="client-data-buttons">
-                        <a role="button" class="active-objects">12</a>
-                        <a role="button" class="inactive-objects">12</a>
-                    </div>
-
-                </div>
-                <div class="client-data">
-
-                    <div class="client-data-label">
-                        <a>Строительство трубопроводных систем</a>
-                    </div>
-
-                    <div class="client-data-buttons">
-                        <a role="button" class="active-objects">12</a>
-                        <a role="button" class="inactive-objects">12</a>
-                    </div>
-
-                </div>
-                <div class="client-data">
-
-                    <div class="client-data-label">
-                        <a>Строительство трубопроводных систем</a>
-                    </div>
-
-                    <div class="client-data-buttons">
-                        <a role="button" class="active-objects">12</a>
-                        <a role="button" class="inactive-objects">12</a>
-                    </div>
-
-                </div>
-                <div class="client-data">
-
-                    <div class="client-data-label">
-                        <a>Строительство трубопроводных систем</a>
-                    </div>
-
-                    <div class="client-data-buttons">
-                        <a role="button" class="active-objects">12</a>
-                        <a role="button" class="inactive-objects">12</a>
-                    </div>
-
-                </div>
-                <div class="client-data">
-
-                    <div class="client-data-label">
-                        <a>Строительство трубопроводных систем</a>
-                    </div>
-
-                    <div class="client-data-buttons">
-                        <a role="button" class="active-objects">12</a>
-                        <a role="button" class="inactive-objects">12</a>
-                    </div>
-
-                </div>
-                <div class="client-data">
-
-                    <div class="client-data-label">
-                        <a>Строительство трубопроводных систем</a>
-                    </div>
-
-                    <div class="client-data-buttons">
-                        <a role="button" class="active-objects">12</a>
-                        <a role="button" class="inactive-objects">12</a>
-                    </div>
-
-                </div>
-                <div class="client-data">
-
-                    <div class="client-data-label">
-                        <a>Строительство трубопроводных систем</a>
-                    </div>
-
-                    <div class="client-data-buttons">
-                        <a role="button" class="active-objects">12</a>
-                        <a role="button" class="inactive-objects">12</a>
-                    </div>
-
-                </div>
-                <div class="client-data">
-
-                    <div class="client-data-label">
-                        <a>Строительство трубопроводных систем</a>
-                    </div>
-
-                    <div class="client-data-buttons">
-                        <a role="button" class="active-objects">12</a>
-                        <a role="button" class="inactive-objects">12</a>
-                    </div>
-
-                </div>
-                <div class="client-data">
-
-                    <div class="client-data-label">
-                        <a>Строительство трубопроводных систем</a>
-                    </div>
-
-                    <div class="client-data-buttons">
-                        <a role="button" class="active-objects">12</a>
-                        <a role="button" class="inactive-objects">12</a>
-                    </div>
-
-                </div>
-                <div class="client-data">
-
-                    <div class="client-data-label">
-                        <a>Строительство трубопроводных систем</a>
-                    </div>
-
-                    <div class="client-data-buttons">
-                        <a role="button" class="active-objects">12</a>
-                        <a role="button" class="inactive-objects">12</a>
-                    </div>
-
-                </div>
-                <div class="client-data">
-
-                    <div class="client-data-label">
-                        <a>Строительство трубопроводных систем</a>
-                    </div>
-
-                    <div class="client-data-buttons">
-                        <a role="button" class="active-objects">12</a>
-                        <a role="button" class="inactive-objects">12</a>
-                    </div>
-
-                </div>
-                <div class="client-data">
-
-                    <div class="client-data-label">
-                        <a>Строительство трубопроводных систем12</a>
-                    </div>
-
-                    <div class="client-data-buttons">
-                        <a role="button" class="active-objects">12</a>
-                        <a role="button" class="inactive-objects">12</a>
-                    </div>
-
-                </div>
-
-
+<!--                </div>-->
 
             </div>
         </div>
