--- a/index.html
+++ b/index.html
@@ -391,8 +391,13 @@
     <section class="section section4" id="section4">
         <div class="container">
             <h1>Привет</h1>
-            <div class="txt">
-                <div>Привет</div>
+            <div class="circ">
+                <div class="load">Подождите . . . </div>
+                <div class="hands"></div>
+                <div class="body"></div>
+                <div class="head">
+                    <div class="eye"></div>
+                </div>
             </div>
         </div>
     </section>
