add a refresh button

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             </div>
             <h1>Калькулятор объектов</h1>
             <div class="service-buttons">
+                <a role="button" class="refresh"></a>
                 <a role="button" class="save-doc"></a>
                 <a role="button" class="print"></a>
             </div>
