working with info-panel

--- a/index.html
+++ b/index.html
@@ -83,6 +83,23 @@
 
                 </div>
                 <div class="work-data">
+                    
+                    <div class="vehicle-info">
+                        <div class="info-title">Название компании</div>
+                        <div class="list-wrapper">
+                            <div class="list-label">Активные</div>
+                            <ol class="vehicle-list">
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                            </ol>
+                        </div>
+                        <a role="button" class="vehicle-info-close"></a>
+                    </div>
 
                 </div>
             </div>
