--- a/index.html
+++ b/index.html
@@ -83,26 +83,7 @@
                     </div>
 
                 </div>
-                <div class="work-data">
-                    
-                    <!-- <div class="vehicle-info">
-                        <div class="info-title">Название компании</div>
-                        <div class="list-wrapper">
-                            <div class="list-label">Активные</div>
-                            <ol class="vehicle-list">
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                            </ol>
-                        </div>
-                        <a role="button" class="vehicle-info-close"></a>
-                    </div> -->
-
-                </div>
+                <div class="work-data"></div>
             </div>
         </section>
 
