change print-file and some other manipulation with index.hstml

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="service-buttons">
                 <a role="button" class="refresh"></a>
                 <a role="button" class="save-doc"></a>
-                <a role="button" class="print"></a>
+                <a role="button" class="to-pdf"></a>
             </div>
 
             <div class="work-wrapper">
